--- a/html_learn/index.html
+++ b/html_learn/index.html
@@ -9,9 +9,9 @@
         <meta charset="UTF-8"/>
         <h1 aligt = "center">hhhhhhh</h1>
         <strong>
-            poru nabash bache  گمشو پدر سوخته
         </strong>
-
+کیری
+        کونده
         <p aligt = "center">llllllllllllll</p>
     </body>
 </html>
